less/widgets.less
/* ... */
//  -----------------------------
//  6.   #GALLERY
//  -----------------------------



.widget.gallery ul li span.inner {
	.title {
		color: @color-swatch1;
		font-weight: @font-swatch3-font-weight;
		font-size: bkscale(@font-swatch4-font-size, 1.1);
	}
	.description {
		color: @color-swatch1;
	}
}

.widget.gallery .inner .image-data {
	background: fade(@color-swatch4, 65%);
	display: block;
	opacity: 0;
	height: auto;
	bottom: 0;
	position: absolute;
	width: 100%;
}

.widget.gallery .inner:hover .image-data {
	.transition(opacity, 0.5s, ease );
	opacity: 1;
}


//  -----------------------------
//  7.   #SLIDESHOW
//  -----------------------------


.widget {
	&.responsiveslideshow {
		margin-top: 20px;
		.slideshow-widget-controls {
			.dot {
			    width: 10px;
			    height: 10px;
			    margin: 3px;
				background-color: @color-swatch7;
				.border-radius(100px);
				&.selected {
				    border: 0;
					background-color: @color-swatch2;
				}
			}
		}
		.content-wrapper {
			background-color: fade(@color-swatch1, 75%);
			top: initial;
			display: inline-block;
			min-height: 50px;
			height: auto;
			max-width: 65%;
			left: 15px;
			right: auto;
			max-width: 80%;
			bottom: 15px;
			@media @mobile {
				display: block;
				height: initial;
			}
			span {
				color: @color-swatch5;
				padding: 20px 4px 0 10px; 
				@media @mobile {
					padding-right: 10px;
				}
				&:last-child {
					padding-right: 10px;
				}
				&.title {
					font-weight: @font-swatch2-font-weight;
				}
			}
		}
		.slideshow-widget {
			.btn-play {
				background-color: fade(@color-swatch1, 65%);
				.border-radius(100px);
				height: 75px;
				width: 75px;
				left: 46.5%;
				@media @tablet {
					left: 44.5%;
				}
				@media @mobile {
					left: 43.5%;
				}
				&:hover {
					background-color: fade(@color-swatch1, 85%);
					transition: all .5s ease;
				}
				&:after {
					font-size: 28px;
				}
				&.pause:after {
					left: 3px;
					line-height: 80px;
				}
			}
			.btn-prev, .btn-next {
				background-color: fade(@color-swatch1, 65%);
				top: 15px;
				font-family: @font-swatch7-font-family;
				font-size: bkscale(@font-swatch3-font-size, 1.4);
				font-weight: @font-swatch5-font-weight;
				height: 50px;
				width: 55px;
				bottom: inherit;
				text-indent: 1000px;
				overflow: hidden;
				.transition(all .5s ease);
				&:hover {
					background-color: fade(@color-swatch1, 85%);
					.transition(all .5s ease);
				}
				&:before {
					display: block;
					position: absolute;
					top: 10px;
					left: 20px;
					width: 0;
					height: 0;
					text-indent: 0;
				}
			}
			.btn-prev {
				left: inherit;
				right: 80px;
				&:before {
					content: "\003c";
				}
				@media @mobile {
					left: 15px;
					right: inherit;
				}
			}
			.btn-next {
				right: 15px;
				&:before {
					content: "\003e";
				}
				@media @mobile {
					left: 80px;
					right: inherit;
				}
			}
		}
	}
}





//  -----------------------------
//  8.   #BUTTONS
//  -----------------------------


button.btn,
.contactform button, .contactform button.btn, 
.advancedcontactform button, .advancedcontactform button.btn,
.widget.button button,
.widget.profile form button,
.widget.signupform fieldset button,
.widget.blogsearch button,
.widget.ecomproductslist .productlist-display-form .form-group button,
.widget.ecomproduct .ecom-product .btn,
.tweet a, .dropbox button, .paypalbuynow input[type=submit].widget, .btn, 
.widget.feature .feature-bgimg .content button,
.widget.ecombasket .ecombasket-list-container ul li .ecombasket-item-info .ecombasket-remove-button {
	padding: 10px 30px;
	border: 0;
	border-radius: 0;
    background-color: @font-swatch7-background-color;
    font-family: @font-swatch7-font-family;
    font-size: @font-swatch7-font-size;
    font-weight: @font-swatch7-font-weight;
    line-height: @font-swatch7-line-height;
    color:@font-swatch7-color;
    letter-spacing: @font-swatch7-letter-spacing;
    text-decoration: none;
	text-transform: uppercase;
	.transition(all, .5s, ease-out);
	&:hover {
	    background-color: @font-swatch7-background-color-hover;
	    .transition(all, 0.75s, ease);
	    cursor: pointer;
    }
}


.widget.paypalbuynow .widget.button.paypal, 
.widget.dropbox button,
.widget.tweet a {
	color: @font-swatch7-color;
	background-color: @font-swatch7-background-color;
	text-transform: uppercase;
	.transition(all, .5s, ease-out);
	&:hover {
		background-color: @font-swatch7-background-color-hover;
		.transition(all, 0.75s, ease);
	}
}

.widget.paypalbuynow .widget.button.paypal, .widget.paypalbuynow .widget.button.paypal:hover {
	background-image: image('/images/ic-paypal.svg');
}

.widget.dropbox button, .widget.dropbox button:hover  {
	background-image: image('/images/ic-dropbox.svg');
}

.widget.tweet a, .widget.tweet a:hover {
	background-image: image('/images/ic-tweet.svg');
}




//  -----------------------------
//  9.   #FORMS
//  -----------------------------



input, textarea,
.contactform input, .contactform textarea,
.widget.profile form fieldset input, a.checkout-empty-link,
.blogsearch input,
.signupform fieldset input,
.productlist-search input {
	background-color: @color-swatch7;
    border: 1px solid darken(@color-swatch1, 10%);
	text-indent: 8px;
	-webkit-appearance: none;
	border-radius: 0;
	&:hover, &:focus {
		border: 1px solid darken(@color-swatch1, 20%);
		.transition(ease, .5s, border);
	}
	@media @mobile {
	    width: 100%;
	}
}

input {
	height: 40px;
}

textarea {
	height: 100px;
	resize: vertical;
}


label,
.contactform label, .advancedcontactform label,
.signupform label,
.ecom-product-vartitle {
	font-family: @font-swatch4-font-family;
	font-size: @font-swatch5-font-size * 0.8;
	font-weight: @font-swatch5-font-weight;
	line-height: @font-swatch5-line-height;
	color: @font-swatch5-color;
	text-transform: uppercase;
	padding-bottom: 5px;
}

select {
	cursor: pointer;
	position: relative;
	padding-right: 33px;
}
/* ... */

